@@ -1,4 +1,23 @@
-// eAthena - Log Configuration File
+//      ______  __    __                                 
+//     /\  _  \/\ \__/\ \                                
+//   __\ \ \L\ \ \ ,_\ \ \___      __    ___      __     
+// /'__`\ \  __ \ \ \/\ \  _ `\  /'__`\/' _ `\  /'__`\   
+///\  __/\ \ \/\ \ \ \_\ \ \ \ \/\  __//\ \/\ \/\ \L\.\_ 
+//\ \____\\ \_\ \_\ \__\\ \_\ \_\ \____\ \_\ \_\ \__/.\_\
+// \/____/ \/_/\/_/\/__/ \/_/\/_/\/____/\/_/\/_/\/__/\/_/
+//  _   _   _   _   _   _   _     _   _   _   _   _   _
+// / \ / \ / \ / \ / \ / \ / \   / \ / \ / \ / \ / \ / \ 
+//( e | n | g | l | i | s | h ) ( A | t | h | e | n | a )
+// \_/ \_/ \_/ \_/ \_/ \_/ \_/   \_/ \_/ \_/ \_/ \_/ \_/
+//
+//--------------------------------------------------------------
+// eAthena Log Configuration File
+//--------------------------------------------------------------
+// Note 1: Value is a config switch (on/off, yes/no or 1/0)
+// Note 2: Value is in percents (100 means 100%)
+// Note 3: Value is a bit field. If no description is given,
+//         assume unit types (1: Pc, 2: Mob, 4: Pet, 8: Homun)
+//--------------------------------------------------------------
 
 // Enable Logs?
 // 1 - Log all events.
@@ -83,19 +102,19 @@ log_npc: 0
 // LOGGING FILTERS
 // =============================================================
 // 0 = Don't log at all
-// 1 = Log EVERYTHING!
-// Advanced Filter Bits: ||
-// 02 - Log Global messages
-// 04 - Log Whisper messages
-// 08 - Log Party messages
-// 16 - Log Guild messages
-// 32 - Log Main chat messages
-// 64 - Don't log anything when WOE is on
+// 1 - Log Global messages
+// 2 - Log Whisper messages
+// 4 - Log Party messages
+// 8 - Log Guild messages
+// 16 - Log Main chat messages
 // Example:
-// log_chat: 12 = logs both Whisper & Party messages
-// log_chat: 16 = logs only Guild messages
-// log_chat: 68 = logs only Whisper, when WOE is off
+// log_chat: 5 = logs both Whisper & Party messages
+// log_chat: 8 = logs only Guild messages
+// log_chat: 31 = logs everything
 log_chat: 0
+
+// Disable chat logging when WoE is running? (Note 1)
+log_chat_woe_disable: no
 
 // Dead Branch Log Table
 log_branch_db: branchlog
